[package]
name = "ark-msm"
version = "0.3.0-alpha.2"
authors = [
    "Jiannan Ouyang <ouyang@snarkify.io>",
    "Boyu Sun <boyu@snarkify.io>",
    "Chao Ma <chao@snarkify.io>",
    "cyphersnake <mikhail@snarkify.io>",
]
description = "An optimized multi-scalar muliplication (MSM) library based on arkworks"
homepage = "https://github.com/snarkify/arkmsm"
repository = "https://github.com/snarkify/arkmsm"
documentation = "https://hackmd.io/@drouyang/msm"
readme = "README.md"
keywords = ["cryptography", "msm", "zkp"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-std = "0.3.0"
num-bigint = "0.4.0"
all_asserts = "2.3.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.test]
opt-level = 3

[[bench]]
harness = false
name = "bench_window_size"

[[bench]]
harness = false
name = "bench_with_baseline"
